--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,4 +24,13 @@ jobs:
     - name: Test
       run: go test -v ./...
         
-    
+    - name: Deploy to AWS EC2
+      uses: appleboy/ssh-action@master
+      with:
+          host: ${{secrets.EC2_PUBLIC_IP}}
+          username: ubuntu
+          key: ${{secrets.EC2_SSH_KEY}}
+          script: |
+            echo "Connected to AWS EC2 instance"
+            cd CLEAN_ECOMMERCESTORE_FULLSTACK
+            git pull
